2004-03-23  Sebastien Pouliot  <sebastien@ximian.com>

	* StrongName.cs: Added exceptions for null or invalid keys.

2004-03-17  Sebastien Pouliot  <sebastien@ximian.com>

	* ASN1.cs: Class synched with Mono.Security.
	* ASN1Convert.cs: Class synched with Mono.Security.

2003-10-18  Sebastien Pouliot  <spouliot@videotron.ca>

	* StrongName.cs: Added from Mono.Security assembly for StrongName
	support in AssemblyBuilder.

2003-10-12  Sebastien Pouliot  <spouliot@videotron.ca>

	* PKCS7.cs: Added from Mono.Security assembly for Authenticode
	support in X509Certificate.CreateFromSignedFile

2003-03-15  Sebastien Pouliot  <spouliot@videotron.ca>

	* ASN1.cs: Improved version.
	* ASN1Convert.cs: New. Helper class to convert between .NET 
	types and ASN.1 structures.

2003-02-08  Sebastien Pouliot  <spouliot@videotron.ca>

	* ASN1.cs: Renamed namespace to match new location.
